test_case/rust-lang_rust/51099_392297931.rs

error: expected one of `)`, `-`, `.`, `<`, `?`, `break`, `continue`, `false`, `for`, `if`, `loop`, `match`, `move`, `return`, `static`, `true`, `unsafe`, `while`, `yield`, or an operator, found `;`
  --> token-error-correct-3.rs:24:35
   |
24 |             callback(path.as_ref(); //~ ERROR expected one of
   |                                   ^ expected one of 20 possible tokens here
